--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "dev": "bun run --watch src/index.ts"
   },
   "dependencies": {
+    "@elysiajs/cors": "^0.7.1",
+    "@elysiajs/static": "^0.7.1",
     "elysia": "latest"
   },
   "devDependencies": {
